# kafka-to-websockets

./: .gitignore  Dockerfile  LICENSE  README.md  pyproject.toml
broadcaster/: main.py
examples/: docker-compose.broadcaster.yaml  docker-compose.kafka-stack.yaml
examples/html/: index.html  producer.py  style.css  websocket.js
examples/html/app/: index.html  style.css  websocket.js
examples/html/generator/: producer.py
wskafka/: main.py
